--- a/apps/frontend/app/globals.css
+++ b/apps/frontend/app/globals.css
@@ -38,6 +38,8 @@
   --color-popover: var(--popover);
   --color-card-foreground: var(--card-foreground);
   --color-card: var(--card);
+  --color-highlight-hover: var(--highlight-hover);
+  --color-highlight: var(--highlight);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -77,6 +79,8 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --highlight: oklch(0.4386 0 0);
+  --highlight-hover: oklch(0.4962 0 0);
 }
 
 .dark {
@@ -111,6 +115,8 @@
   --sidebar-accent-foreground: oklch(0.9551 0 0);
   --sidebar-border: oklch(0.3329 0 0);
   --sidebar-ring: oklch(0.556 0 0);
+  --highlight: oklch(0.3715 0 0);
+  --highlight-hover: oklch(0.4128 0 0);
 }
 
 @layer base {
