--- a/apps/frontend/components/logo/logo-animation.css
+++ b/apps/frontend/components/logo/logo-animation.css
@@ -11,18 +11,34 @@
   background-repeat: no-repeat;
 }
 
-/* Slightly offset for smoother transition between states */
 @keyframes logo-slideshow {
-  0% { transform: translateX(-0.13%); }
-  100% { transform: translateX(-99.8%); }
+  0% { transform: translateX(0%); }
+  100% { transform: translateX(-100%); }
 }
 
+/* Slightly offset for smoother transition between states */
+/* @keyframes logo-slideshow {
+  0% { transform: translateX(-0.13%); }
+  100% { transform: translateX(-99.8%); }
+} */
+
 .logo-sm {
+  width: 16px;
+  height: 16px;
+}
+
+.logo-sm[data-animate="true"] {
+  width: 240px;
+  height: 16px;
+  animation: logo-slideshow 1.5s steps(15) infinite;
+}
+
+.logo-md {
   width: 20px;
   height: 20px;
 }
 
-.logo-sm[data-animate="true"] {
+.logo-md[data-animate="true"] {
   width: 300px;
   height: 20px;
   animation: logo-slideshow 1.5s steps(15) infinite;
