--- a/apps/frontend/components/logo/logo-animation.css
+++ b/apps/frontend/components/logo/logo-animation.css
@@ -22,35 +22,21 @@
   100% { transform: translateX(-99.8%); }
 } */
 
-.logo-sm {
-  width: 16px;
-  height: 16px;
-}
-
 .logo-sm[data-animate="true"] {
-  width: 240px;
-  height: 16px;
+  /* width: 240px; */
+  /* height: 16px; */
   animation: logo-slideshow 1.5s steps(15) infinite;
-}
-
-.logo-md {
-  width: 20px;
-  height: 20px;
 }
 
 .logo-md[data-animate="true"] {
-  width: 300px;
-  height: 20px;
+  /* width: 300px; */
+  /* height: 20px; */
   animation: logo-slideshow 1.5s steps(15) infinite;
 }
 
-.logo-lg {
-  width: 25px;
-  height: 25px;
-}
 
 .logo-lg[data-animate="true"] {
-  width: 375px;
-  height: 25px;
+  /* width: 375px; */
+  /* height: 25px; */
   animation: logo-slideshow 2s steps(15) infinite;
 }
