Add GitHub Issues Integration to Task Creation (#67)
* start github issues

* add prefetch

* fix search param handling

* re-organize graphics

* repo styling

* github issue creation flow

* organize github code

* flatter github folder

* issueId string

* move issue prompt to client side

* fix init bugs

* edit behavior

--- a/apps/frontend/app/globals.css
+++ b/apps/frontend/app/globals.css
@@ -166,3 +166,12 @@ body,
 .code-editor .line-numbers {
   user-select: none;
 }
+
+.github-issues-container::-webkit-scrollbar {
+  display: none;
+}
+
+.github-issues-container {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
