--- a/apps/frontend/app/globals.css
+++ b/apps/frontend/app/globals.css
@@ -167,11 +167,14 @@ body,
   user-select: none;
 }
 
-.github-issues-container::-webkit-scrollbar {
+/* Note: 2nd selector is to hide terminal scrollbar */
+.hide-scrollbar::-webkit-scrollbar,
+.hide-scrollbar > * > .xterm-viewport::-webkit-scrollbar {
   display: none;
 }
 
-.github-issues-container {
+.hide-scrollbar,
+.hide-scrollbar > * > .xterm-viewport {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
