--- a/apps/frontend/app/globals.css
+++ b/apps/frontend/app/globals.css
@@ -184,50 +184,36 @@ img {
 }
 
 /* Shiki diff transformer styles */
-.shiki-diff-container pre.has-diff {
+.shiki-diff-container pre.has-diff > code {
   position: relative;
 }
 
 .shiki-diff-container .line.diff {
   position: relative;
-  padding-left: 1rem;
 }
 
 .shiki-diff-container .line.diff::before {
   position: absolute;
   left: 0.25rem;
-  content: '';
-  font-weight: bold;
+  content: "";
+  font-weight: medium;
   color: inherit;
 }
 
 .shiki-diff-container .line.diff.add::before {
-  content: '+';
+  content: "+";
   color: rgb(22 163 74); /* green-600 */
 }
 
 .shiki-diff-container .line.diff.remove::before {
-  content: '-';  
+  content: "-";
   color: rgb(220 38 38); /* red-600 */
 }
 
 .shiki-diff-container .line.diff.add {
-  background-color: rgb(240 253 244); /* green-50 */
-  border-left: 3px solid rgb(34 197 94); /* green-500 */
+  background-color: rgb(20 83 45 / 0.3); /* green-950/30 */
 }
 
 .shiki-diff-container .line.diff.remove {
-  background-color: rgb(254 242 242); /* red-50 */
-  border-left: 3px solid rgb(239 68 68); /* red-500 */
-}
-
-/* Dark mode styles */
-.dark .shiki-diff-container .line.diff.add {
-  background-color: rgb(20 83 45 / 0.3); /* green-950/30 */
-  border-left-color: rgb(34 197 94); /* green-500 */
-}
-
-.dark .shiki-diff-container .line.diff.remove {
   background-color: rgb(127 29 29 / 0.3); /* red-950/30 */
-  border-left-color: rgb(239 68 68); /* red-500 */
 }
